--- a/MyGov/user/templates/user/cadastro.html
+++ b/MyGov/user/templates/user/cadastro.html
@@ -1,22 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
 
-  <h1>Cadastro</h1>
+  <body>
+    <header>
+      <a href="https://www.gov.br"><img src="https://sso.acesso.gov.br/assets/govbr/img/govbr.png" alt="Logomarca GovBR" height="30px" width="auto"></a>
+    </header>
 
-  <form action="{% url 'register' %}" method="post">
-    {% csrf_token %}
-    <label for="email">Email:</label>
-    <input type="email" name="email" id="email" required>
-    <label for="password">Senha:</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="cadastro">
-  </form>
-  
-</body>
+    <div class="register-container">
+      <img src="https://sso.acesso.gov.br/assets/govbr/img/conta_govbr_v2.jpg" alt="Logomarca GovBR" height="auto">
+      <div class="register-form">
+        <h2>Realizar Cadastro</h2>
+
+        <form action="{% url 'register' %}" method="post">
+          {% csrf_token %}
+          <div class="form-inputs">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" value="{{ request.POST.email }}" required>
+          </div>
+
+          <div class="form-inputs">
+            <label for="password">Senha:</label>
+            <input type="password" name="password" id="password" required>
+          </div>
+
+          <div class="form-inputs">
+            <label for="password-confirm">Confirmar Senha:</label>
+            <input type="password" name="password-confirm" id="password-confirm" required>
+          </div>
+
+          <input class="submit-button" type="submit" value="Cadastrar">
+        </form>
+
+        {% if error %}
+          <p style="color: red;">{{ error }}</p>
+        {% endif %}
+      </div>
+    </div>
+  </body>
 </html>
+
+<style>
+  html, body {margin: 0; height: 100%; overflow: hidden}
+  header {
+    display: flex;
+    justify-content: flex-start;
+    padding: 10px !important;
+    align-items: center;
+    box-shadow: 0 3px 6px #00000029;
+    margin-bottom: 5px;
+    background-color: #fff;
+    width: 100%;
+    height: 3rem;
+    padding: 10px;
+  }
+  .register-container {
+    display: flex;
+    width: 100%;
+    gap: 1.5rem;
+    justify-content: center;
+    padding: 25px;
+    background-color: #fff;
+  }
+  .register-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    box-shadow: 0 2px 4px #00000033;
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      width: 100%;
+    }
+  }
+  .form-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+  }
+  .form-inputs label {
+    font-size: 1.2rem;
+  }
+  .form-inputs input {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  .submit-button {
+    margin-top: 5px;
+    border: none;
+    border-radius: 100em;
+    min-width: 100px;
+    font-size: 1rem;
+    padding: 0.5rem;
+    color: #fff;
+    background-color: #1351B4;
+    cursor: pointer;
+  }
+</style>
