feat: adicionado tela de serviços

--- a/MyGov/user/templates/user/login.html
+++ b/MyGov/user/templates/user/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login</title>
 </head>
 <body>
   <header>
@@ -33,6 +33,8 @@
       {% if error %}
         <p style="color: red;">{{ error }}</p>
       {% endif %}
+
+      <p>Não possui uma conta? <a href="{% url 'register' %}">cadastre-se!</a></p>
     </div>
   </div>
 </body>
