--- a/MyGov/templates/index.html
+++ b/MyGov/templates/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,46 +14,46 @@
             margin: 0;
             padding: 0;
         }
-        
+
         /* Cabeçalho */
         header {
             background-color: #0072C6;
             color: #fff;
             padding: 20px;
         }
-        
+
         header h1 {
             margin: 0;
         }
-        
+
         /* Navegação */
         nav {
             background-color: #003C71;
             color: #fff;
             padding: 10px;
         }
-        
+
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
         }
-        
+
         nav li {
             display: inline;
             margin-right: 20px;
         }
-        
+
         nav a {
             color: #fff;
             text-decoration: none;
         }
-        
+
         /* Conteúdo principal */
         main {
             padding: 20px;
         }
-        
+
         /* Rodapé */
         footer {
             background-color: #003C71;
@@ -72,8 +72,10 @@
         <ul>
             <li><a href="#">Início</a></li>
             <li><a href="#">Sobre</a></li>
-            <li><a href="#">Serviços</a></li>
             <li><a href="#">Contato</a></li>
+            <li><a href="{% url 'home' %}">Serviços</a></li>
+            <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'register' %}">Cadastrar</a></li>
         </ul>
     </nav>
     
