--- a/MyGov/user/templates/user/cadastro.html
+++ b/MyGov/user/templates/user/cadastro.html
@@ -1,15 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
+<html lang="pt-BR">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-  </head>
+    <link rel="icon" href="{% static 'images/favicon.png' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@govbr-ds/core@3.3.1/dist/core.min.css">
+    <title>GOV.BR</title>
+</head>
+<body>
+  <header class="br-header" id="header" data-sticky="data-sticky">
+    <div class="container-lg">
+        <div class="header-top">
+          <div class="header-logo">
+            <a href="{% url 'index' %}">
+                <img src="{% static 'images/logo-gov.png' %}" alt="Governo Federal" class="img-fluid">
+            </a>
+          </div>
+</header>
 
   <body>
-    <header>
-      <a href="https://www.gov.br"><img src="https://sso.acesso.gov.br/assets/govbr/img/govbr.png" alt="Logomarca GovBR" height="30px" width="auto"></a>
-    </header>
 
     <div class="register-container">
       <img src="https://sso.acesso.gov.br/assets/govbr/img/conta_govbr_v2.jpg" alt="Logomarca GovBR" height="auto">
@@ -45,19 +55,6 @@
 </html>
 
 <style>
-  html, body {margin: 0; height: 100%; overflow: hidden}
-  header {
-    display: flex;
-    justify-content: flex-start;
-    padding: 10px !important;
-    align-items: center;
-    box-shadow: 0 3px 6px #00000029;
-    margin-bottom: 5px;
-    background-color: #fff;
-    width: 100%;
-    height: 3rem;
-    padding: 10px;
-  }
   .register-container {
     display: flex;
     width: 100%;
