--- a/MyGov/user/templates/user/login.html
+++ b/MyGov/user/templates/user/login.html
@@ -1,14 +1,23 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'images/favicon.png' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@govbr-ds/core@3.3.1/dist/core.min.css">
+    <title>GOV.BR</title>
 </head>
 <body>
-  <header>
-    <a href="https://www.gov.br"><img src="https://sso.acesso.gov.br/assets/govbr/img/govbr.png" alt="Logomarca GovBR" height="30px" width="auto"></a>
-  </header>
+  <header class="br-header" id="header" data-sticky="data-sticky">
+    <div class="container-lg">
+        <div class="header-top">
+          <div class="header-logo">
+            <a href="{% url 'index' %}">
+                <img src="{% static 'images/logo-gov.png' %}" alt="Governo Federal" class="img-fluid">
+            </a>
+          </div>
+</header>
 
   <div class="login-container">
     <img src="https://sso.acesso.gov.br/assets/govbr/img/conta_govbr_v2.jpg" alt="Logomarca GovBR" height="auto">
@@ -41,19 +50,7 @@
 </html>
 
 <style>
-  html, body {margin: 0; height: 100%; overflow: hidden}
-  header {
-    display: flex;
-    justify-content: flex-start;
-    padding: 10px !important;
-    align-items: center;
-    box-shadow: 0 3px 6px #00000029;
-    margin-bottom: 5px;
-    background-color: #fff;
-    width: 100%;
-    height: 3rem;
-    padding: 10px;
-  }
+
   .login-container {
     display: flex;
     width: 100%;
